--- a/app/src/main/res/layout/item_base_contact_view.xml
+++ b/app/src/main/res/layout/item_base_contact_view.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="@dimen/dp_20"
-        android:text="测试吴旻晓"
+        android:text=""
         android:textColor="@color/colorT3"
         android:textSize="@dimen/sp_13" />
 
@@ -22,7 +22,7 @@
         android:layout_marginTop="@dimen/dp_8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="18021121212"
+        android:text=""
         android:textColor="@color/colorT3"
         android:textSize="@dimen/sp_13" />
 
