--- a/app/src/main/res/layout/item_base_passenger_view.xml
+++ b/app/src/main/res/layout/item_base_passenger_view.xml
@@ -52,15 +52,17 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tv_idcard"
+            android:layout_marginRight="@dimen/dp_5"
+            android:id="@+id/tv_idtype"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="身份证："
+            android:text="身份证"
             android:textColor="@color/colorT3"
             android:textSize="@dimen/sp_13" />
 
 
         <TextView
+            android:id="@+id/tv_idcard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="18021121212"
