--- a/app/src/main/res/layout/item_price_group.xml
+++ b/app/src/main/res/layout/item_price_group.xml
@@ -2,14 +2,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/dp_5">
+    android:paddingLeft="@dimen/dp_10"
+    android:paddingRight="@dimen/dp_10"
+    >
 
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:padding="@dimen/dp_10"
+        android:padding="@dimen/dp_5"
         android:text=""
         android:textColor="@color/topview_bg"
         android:textSize="@dimen/sp_14" />
@@ -19,7 +21,7 @@
         android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="@dimen/dp_10"
+        android:padding="@dimen/dp_5"
         android:text=""
         android:textColor="@color/price_color"
         android:textSize="@dimen/sp_14" />
