添加卡券信息

--- a/app/src/main/res/layout/activity_order_normal_detail.xml
+++ b/app/src/main/res/layout/activity_order_normal_detail.xml
@@ -43,7 +43,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"></android.support.v4.view.ViewPager>
 
-
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_1"
+            android:background="@color/colorLine"></View>
         <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
