--- a/app/src/main/res/layout/fragment_order_detail_base.xml
+++ b/app/src/main/res/layout/fragment_order_detail_base.xml
@@ -1,174 +1,214 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scrollbars="none">
+    android:orientation="vertical">
 
-    <LinearLayout
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+        android:id="@+id/pull"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        app:srlDisableContentWhenLoading="true"
+        app:srlDisableContentWhenRefresh="true">
 
-
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/white"
-            android:orientation="vertical"
-            android:padding="@dimen/dp_10">
+            android:layout_height="match_parent"
+            android:scrollbars="none">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="vertical">
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/white"
+                    android:orientation="vertical"
+                    android:padding="@dimen/dp_10">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:text="订单编号："
+                            android:textColor="@color/colorT3"
+                            android:textSize="@dimen/sp_13" />
+
+                        <TextView
+                            android:id="@+id/tv_order_no"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginLeft="@dimen/dp_5"
+                            android:layout_marginRight="5dp"
+                            android:text=""
+                            android:textColor="@color/colorT6"
+                            android:textSize="@dimen/sp_13" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:background="@drawable/shape_orderdetail_text"
+                            android:paddingLeft="@dimen/dp_8"
+                            android:paddingTop="@dimen/dp_2"
+                            android:paddingRight="@dimen/dp_8"
+                            android:paddingBottom="@dimen/dp_2"
+                            android:text="因公"
+                            android:textColor="@color/yellow_color"
+                            android:textSize="@dimen/sp_12"
+                            android:visibility="gone" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/dp_5"
+                        android:layout_marginBottom="@dimen/dp_5"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:text="订单状态："
+                            android:textColor="@color/colorT3"
+                            android:textSize="@dimen/sp_13" />
+
+                        <TextView
+                            android:id="@+id/tv_order_status"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginLeft="@dimen/dp_5"
+                            android:layout_marginRight="@dimen/dp_5"
+                            android:text=""
+                            android:textColor="@color/yellow_color"
+                            android:textSize="@dimen/sp_13" />
+                    </LinearLayout>
+
+                    <LinearLayout
+
+
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/tv_order_time_str"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:text="预定时间："
+                            android:textColor="@color/colorT3"
+                            android:textSize="@dimen/sp_13" />
+
+                        <TextView
+                            android:id="@+id/tv_order_time"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginRight="5dp"
+                            android:text=""
+                            android:textColor="@color/colorT6"
+                            android:textSize="@dimen/sp_13" />
+                    </LinearLayout>
+                </LinearLayout>
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/tv_hc_title"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="订单编号："
-                    android:textColor="@color/colorT3"
-                    android:textSize="@dimen/sp_13" />
-
-                <TextView
-                    android:id="@+id/tv_order_no"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="@dimen/dp_5"
-                    android:layout_marginRight="5dp"
-                    android:text=""
+                    android:paddingLeft="@dimen/dp_10"
+                    android:paddingTop="@dimen/dp_5"
+                    android:paddingBottom="@dimen/dp_5"
+                    android:text="航程信息"
                     android:textColor="@color/colorT6"
-                    android:textSize="@dimen/sp_13" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:background="@drawable/shape_orderdetail_text"
-                    android:paddingLeft="@dimen/dp_8"
-                    android:paddingTop="@dimen/dp_2"
-                    android:paddingRight="@dimen/dp_8"
-                    android:paddingBottom="@dimen/dp_2"
-                    android:text="因公"
-                    android:textColor="@color/yellow_color"
-                    android:textSize="@dimen/sp_12"
+                    android:textSize="@dimen/sp_14"
                     android:visibility="gone" />
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_5"
-                android:layout_marginBottom="@dimen/dp_5"
-                android:orientation="horizontal">
+                <LinearLayout
+                    android:id="@+id/ll_hb"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                </LinearLayout>
+                <!--<include layout="@layout/item_base_airtravel_view" />-->
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/tv_passenger_title"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="订单状态："
-                    android:textColor="@color/colorT3"
-                    android:textSize="@dimen/sp_13" />
-
-                <TextView
-                    android:id="@+id/tv_order_status"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="@dimen/dp_5"
-                    android:layout_marginRight="@dimen/dp_5"
-                    android:text=""
-                    android:textColor="@color/yellow_color"
-                    android:textSize="@dimen/sp_13" />
-            </LinearLayout>
-
-            <LinearLayout
-
-
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="预定时间："
-                    android:textColor="@color/colorT3"
-                    android:textSize="@dimen/sp_13" />
-
-                <TextView
-                    android:id="@+id/tv_order_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:text=""
+                    android:paddingLeft="10dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:text="乘机人信息"
                     android:textColor="@color/colorT6"
-                    android:textSize="@dimen/sp_13" />
+                    android:textSize="@dimen/sp_14"
+                    android:visibility="gone" />
+
+                <LinearLayout
+                    android:id="@+id/ll_passenger"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                </LinearLayout>
+                <!--<include layout="@layout/item_base_passenger_view" />-->
+
+                <TextView
+                    android:id="@+id/tv_concact_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="@dimen/dp_10"
+                    android:paddingTop="@dimen/dp_5"
+                    android:paddingBottom="@dimen/dp_5"
+                    android:text="联系人信息"
+                    android:textColor="@color/colorT6"
+                    android:textSize="@dimen/sp_14" />
+
+                <LinearLayout
+                    android:id="@+id/ll_lianxi"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"></LinearLayout>
+                <!--<include layout="@layout/item_base_contact_view" />-->
+             <LinearLayout
+                 android:orientation="vertical"
+                 android:id="@+id/ll_coupon"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"></LinearLayout>
+              <!--<include layout="@layout/item_coupon_view"/>-->
+                <TextView
+                    android:id="@+id/tv_pay_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="@dimen/dp_10"
+                    android:paddingTop="@dimen/dp_5"
+                    android:paddingBottom="@dimen/dp_5"
+                    android:text="支付信息"
+                    android:textColor="@color/colorT6"
+                    android:textSize="@dimen/sp_14"
+                    android:visibility="gone" />
+
+                <LinearLayout
+                    android:id="@+id/ll_pay_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"></LinearLayout>
             </LinearLayout>
-        </LinearLayout>
+        </ScrollView>
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
-        <TextView
-            android:visibility="gone"
-            android:id="@+id/tv_hc_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/dp_10"
-            android:paddingTop="@dimen/dp_5"
-            android:paddingBottom="@dimen/dp_5"
-            android:text="航程信息"
-            android:textColor="@color/colorT6"
-            android:textSize="@dimen/sp_14" />
-
-        <LinearLayout
-            android:id="@+id/ll_hb"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-        </LinearLayout>
-        <!--<include layout="@layout/item_base_airtravel_view" />-->
-
-        <TextView
-            android:visibility="gone"
-            android:id="@+id/tv_passenger_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:text="乘机人信息"
-            android:textColor="@color/colorT6"
-            android:textSize="@dimen/sp_14" />
-
-        <LinearLayout
-            android:id="@+id/ll_passenger"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-        </LinearLayout>
-        <!--<include layout="@layout/item_base_passenger_view" />-->
-
-        <TextView
-            android:id="@+id/tv_concact_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/dp_10"
-            android:paddingTop="@dimen/dp_5"
-            android:paddingBottom="@dimen/dp_5"
-            android:text="联系人信息"
-            android:textColor="@color/colorT6"
-            android:textSize="@dimen/sp_14" />
-
-        <LinearLayout
-            android:id="@+id/ll_lianxi"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"></LinearLayout>
-        <!--<include layout="@layout/item_base_contact_view" />-->
-    </LinearLayout>
-</ScrollView>
+</LinearLayout>
