--- a/app/src/main/res/layout/fragment_orderlist_endore.xml
+++ b/app/src/main/res/layout/fragment_orderlist_endore.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
     <TextView
+        android:id="@+id/tv_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
