--- a/app/src/main/res/layout/item_base_airtravel_view.xml
+++ b/app/src/main/res/layout/item_base_airtravel_view.xml
@@ -4,8 +4,11 @@
     android:layout_height="wrap_content"
     android:background="@android:color/white"
     android:orientation="vertical"
-    android:padding="@dimen/dp_10">
+    >
     <LinearLayout
+        android:paddingTop="@dimen/dp_5"
+        android:paddingBottom="@dimen/dp_5"
+        android:background="@drawable/shape_top_hb"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -15,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:src="@mipmap/air_line_zh" />
+             />
 
         <TextView
             android:id="@+id/tv_hk_name"
@@ -24,8 +27,8 @@
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="@dimen/dp_5"
             android:layout_marginRight="@dimen/dp_5"
-            android:text="深航"
-            android:textColor="@color/colorT3"
+            android:text=""
+            android:textColor="@color/white"
             android:textSize="@dimen/sp_14" />
 
         <TextView
@@ -34,20 +37,28 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="@dimen/dp_5"
-            android:text="ZH9810"
-            android:textColor="@color/colorT3"
+            android:text=""
+            android:textColor="@color/white"
             android:textSize="@dimen/sp_14" />
-
         <TextView
-            android:id="@+id/tv_start_time"
+            android:id="@+id/tv_hk_chang"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/dp_20"
-            android:layout_marginRight="@dimen/dp_5"
-            android:text="8月20日 周六"
-            android:textColor="@color/colorT3"
+            android:layout_marginLeft="@dimen/dp_5"
+            android:text=""
+            android:textColor="@color/white"
             android:textSize="@dimen/sp_14" />
+        <TextView
+            android:id="@+id/tv_hk_jx"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/dp_5"
+            android:text=""
+            android:textColor="@color/white"
+            android:textSize="@dimen/sp_14" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -65,18 +76,27 @@
                 android:id="@+id/tv_time_start"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="08:40"
+                android:text="00:00"
                 android:textColor="@color/colorT3"
                 android:textSize="@dimen/sp_20" />
 
             <TextView
+                android:layout_marginBottom="@dimen/dp_5"
                 android:id="@+id/tv_start_adress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_time_start"
                 android:layout_gravity="center_vertical"
-                android:text="宝安机场T3"
+                android:text="T2机场"
                 android:textColor="@color/colorT9"
+                android:textSize="@dimen/sp_14" />
+            <TextView
+                android:layout_below="@+id/tv_start_adress"
+                android:id="@+id/tv_start_time_week"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="周六"
+                android:textColor="@color/colorT3"
                 android:textSize="@dimen/sp_13" />
         </RelativeLayout>
 
@@ -84,7 +104,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_10"
-            android:layout_marginTop="@dimen/dp_5"
+            android:layout_marginTop="@dimen/dp_3"
             android:layout_marginRight="@dimen/dp_5"
             android:src="@mipmap/plane_1" />
 
@@ -96,18 +116,28 @@
                 android:id="@+id/tv_time_end"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="08:40"
+                android:text="00:00"
                 android:textColor="@color/colorT3"
                 android:textSize="@dimen/sp_20" />
 
             <TextView
+
+                android:layout_marginBottom="@dimen/dp_5"
                 android:id="@+id/tv_end_adress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_time_end"
                 android:layout_gravity="center_vertical"
-                android:text="天河机场T3"
+                android:text="T3机场"
                 android:textColor="@color/colorT9"
+                android:textSize="@dimen/sp_14" />
+            <TextView
+                android:layout_below="@+id/tv_end_adress"
+                android:id="@+id/tv_end_time_week"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="周六"
+                android:textColor="@color/colorT3"
                 android:textSize="@dimen/sp_13" />
         </RelativeLayout>
 
