--- a/app/src/main/res/drawable/app_splash.xml
+++ b/app/src/main/res/drawable/app_splash.xml
@@ -7,6 +7,6 @@
     </item>
 
     <item>
-        <bitmap android:src="@mipmap/app_start_img" />
+        <bitmap android:src="@mipmap/app_bg" />
     </item>
 </layer-list>
