--- a/app/src/main/res/layout/activity_control_department_list.xml
+++ b/app/src/main/res/layout/activity_control_department_list.xml
@@ -29,7 +29,8 @@
     </RelativeLayout>
 
     <TextView
-        android:visibility="gone"
+        android:id="@+id/tv_error"
+        android:visibility="visible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
