--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,7 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/dp_25"
-            android:layout_marginTop="@dimen/dp_20"
+            android:layout_marginTop="@dimen/dp_30"
         android:layout_marginRight="@dimen/dp_25"
         android:layout_marginBottom="@dimen/dp_25"
         android:orientation="vertical">
@@ -204,6 +204,7 @@
         android:paddingRight="@dimen/dp_15">
 
         <TextView
+            android:visibility="gone"
             android:id="@+id/tv_forget"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -220,6 +221,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:visibility="gone"
                 android:id="@+id/tv_company_register"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -230,12 +232,14 @@
                 android:textSize="@dimen/sp_12" />
 
             <ImageView
+                android:visibility="gone"
                 android:id="@+id/b2g_entry_layout_b2clogin_img"
                 android:layout_width="1dp"
                 android:layout_height="@dimen/dp_12"
                 android:background="@color/topview_bg" />
 
             <TextView
+                android:visibility="gone"
                 android:id="@+id/tv_person_login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
