--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,15 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/ll_content"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:background="@mipmap/app_bg"
     android:orientation="vertical">
-
-
-    <include layout="@layout/item_coupon_title_view" />
-
-
-    <include layout="@layout/item_coupon_detail_view" />
-
 
 </LinearLayout>
