--- a/app/src/main/res/layout/coupon_detail_base_view.xml
+++ b/app/src/main/res/layout/coupon_detail_base_view.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/ll_content"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-
-
     <include layout="@layout/item_coupon_title_view" />
-
-
-    <include layout="@layout/item_coupon_detail_view" />
-
-
+    <LinearLayout
+        android:background="@color/white"
+        android:id="@+id/ll_coupon"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></LinearLayout>
 </LinearLayout>
