--- a/app/src/main/res/layout/fragment_order_detail_base.xml
+++ b/app/src/main/res/layout/fragment_order_detail_base.xml
@@ -53,7 +53,18 @@
                             android:text=""
                             android:textColor="@color/colorT6"
                             android:textSize="@dimen/sp_13" />
-
+                        <TextView
+                            android:background="@drawable/btn_order_si"
+                            android:id="@+id/tv_si"
+                            android:gravity="center"
+                            android:layout_width="@dimen/dp_30"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginLeft="@dimen/dp_5"
+                            android:layout_marginRight="5dp"
+                            android:text=""
+                            android:textColor="@color/price_color"
+                            android:textSize="@dimen/sp_13" />
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
