--- a/app/src/main/res/layout/item_base_airtravel_view.xml
+++ b/app/src/main/res/layout/item_base_airtravel_view.xml
@@ -62,17 +62,21 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/dp_10"
         android:layout_marginBottom="@dimen/dp_10">
 
-        <RelativeLayout
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
             <TextView
+                android:layout_gravity="end"
                 android:id="@+id/tv_time_start"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -81,16 +85,18 @@
                 android:textSize="@dimen/sp_20" />
 
             <TextView
+                    android:gravity="right"
                 android:layout_marginBottom="@dimen/dp_5"
                 android:id="@+id/tv_start_adress"
-                android:layout_width="wrap_content"
+                android:layout_width="@dimen/dp_120"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_time_start"
-                android:layout_gravity="center_vertical"
-                android:text="T2机场"
+                android:layout_gravity="right"
+                android:text="深圳航空T2机场"
                 android:textColor="@color/colorT9"
                 android:textSize="@dimen/sp_14" />
             <TextView
+                android:layout_gravity="end"
                 android:layout_below="@+id/tv_start_adress"
                 android:id="@+id/tv_start_time_week"
                 android:layout_width="wrap_content"
@@ -98,9 +104,11 @@
                 android:text="周六"
                 android:textColor="@color/colorT3"
                 android:textSize="@dimen/sp_13" />
-        </RelativeLayout>
+        </LinearLayout>
 
         <ImageView
+            android:id="@+id/iv_center"
+            android:layout_centerHorizontal="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_10"
@@ -108,7 +116,9 @@
             android:layout_marginRight="@dimen/dp_5"
             android:src="@mipmap/plane_1" />
 
-        <RelativeLayout
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
@@ -124,11 +134,11 @@
 
                 android:layout_marginBottom="@dimen/dp_5"
                 android:id="@+id/tv_end_adress"
-                android:layout_width="wrap_content"
+                android:layout_width="@dimen/dp_120"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_time_end"
                 android:layout_gravity="center_vertical"
-                android:text="T3机场"
+                android:text="深圳机场"
                 android:textColor="@color/colorT9"
                 android:textSize="@dimen/sp_14" />
             <TextView
@@ -139,7 +149,7 @@
                 android:text="周六"
                 android:textColor="@color/colorT3"
                 android:textSize="@dimen/sp_13" />
-        </RelativeLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
