--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
     <color name="topview_pressed_bg">#d01e2e</color>
     <color name="no_data_default">#ccc</color>
     <color name="white">#ffffff</color>
+    <color name="colorGray">#eeeeee</color>
+    <color name="pop_bg">#9a030202</color>
     <color name="colorT0">#000000</color>
     <color name="colorT3">#333333</color>
     <color name="colorT6">#666666</color>
