--- a/app/src/main/res/layout/item_order_pay_detail_view.xml
+++ b/app/src/main/res/layout/item_order_pay_detail_view.xml
@@ -77,7 +77,7 @@
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/sp_13" />
             <TextView
-                android:visibility="visible"
+                android:visibility="gone"
                 android:id="@+id/tv_control"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -95,7 +95,7 @@
                 android:id="@+id/tv_pay"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="visible"
+                android:visibility="gone"
                 android:background="@drawable/btn_pay_cancel"
                 android:gravity="center"
                 android:paddingLeft="@dimen/dp_16"
