--- a/app/src/main/res/layout/item_lv_pay_list.xml
+++ b/app/src/main/res/layout/item_lv_pay_list.xml
@@ -6,11 +6,17 @@
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
+    <ImageView
+        android:id="@+id/iv_img"
+        android:layout_gravity="center_vertical"
+        android:paddingLeft="@dimen/dp_15"
+        android:src="@mipmap/icon_pos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawableLeft="@mipmap/icon_pay_img"
         android:drawableRight="@drawable/check_red"
         android:drawablePadding="@dimen/dp_12"
         android:padding="@dimen/dp_15"
