--- a/app/src/main/res/layout/acitivity_filter_ticket.xml
+++ b/app/src/main/res/layout/acitivity_filter_ticket.xml
@@ -195,6 +195,7 @@
                     android:layout_height="1dp"
                     android:background="@mipmap/line_abs" />
 
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -228,7 +229,40 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:background="@mipmap/line_abs" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/white"
+                    android:orientation="horizontal"
+                    android:paddingRight="@dimen/dp_10"
+                    android:paddingLeft="@dimen/dp_10">
 
+                    <TextView
+                        android:id="@+id/tv_pay_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/dp_12"
+                        android:text="支付状态"
+                        android:textColor="@color/colorT3"
+                        android:textSize="@dimen/sp_15" />
+
+                    <TextView
+                        android:id="@+id/tv_pay_status"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@null"
+                        android:drawableRight="@mipmap/arrow_more"
+                        android:padding="@dimen/dp_13"
+                        android:text="未付"
+                        android:textColor="@color/colorT3"
+                        android:textSize="@dimen/sp_15" />
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@mipmap/line_abs" />
                 <LinearLayout
                     android:visibility="gone"
                     android:layout_width="match_parent"
