--- a/app/src/main/res/layout/item_base_airtravel_view.xml
+++ b/app/src/main/res/layout/item_base_airtravel_view.xml
@@ -81,7 +81,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                android:text="00:00"
+                android:text=""
                 android:textColor="@color/colorT3"
                 android:textSize="@dimen/sp_20" />
 
@@ -93,7 +93,7 @@
                 android:layout_gravity="right"
                 android:layout_marginBottom="@dimen/dp_5"
                 android:gravity="right"
-                android:text="深圳航空T2机场"
+                android:text=""
                 android:textColor="@color/colorT9"
                 android:textSize="@dimen/sp_14" />
 
@@ -103,7 +103,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tv_start_adress"
                 android:layout_gravity="end"
-                android:text="周六"
+                android:text=""
                 android:textColor="@color/colorT3"
                 android:textSize="@dimen/sp_13" />
         </LinearLayout>
@@ -133,7 +133,7 @@
                     android:id="@+id/tv_time_end"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="00:00"
+                    android:text=""
                     android:textColor="@color/colorT3"
                     android:textSize="@dimen/sp_20" />
 
@@ -163,7 +163,7 @@
                 android:layout_below="@id/tv_time_end"
                 android:layout_gravity="center_vertical"
                 android:layout_marginBottom="@dimen/dp_5"
-                android:text="深圳机场"
+                android:text=""
                 android:textColor="@color/colorT9"
                 android:textSize="@dimen/sp_14" />
 
@@ -172,7 +172,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tv_end_adress"
-                android:text="周六"
+                android:text=""
                 android:textColor="@color/colorT3"
                 android:textSize="@dimen/sp_13" />
         </LinearLayout>
